--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   "require": {
   },
   "require-dev": {
-      "orchestra/testbench": "^3.8|^4.0"
+      "phpunit/phpunit": "8.4.*"
   },
   "autoload": {
     "psr-4": {
